# lab05

./: .gitignore  README.md
.github/workflows/: ci.yml
banking/: .gitignore  CMakeLists.txt
banking/tests/: test.cpp
tests/: CMakeLists.txt
